--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 Manufaktura Ortodoncji - Sylwia Jurasz. Wszelkie prawa zastrzeżone.</p>
+        <p>&copy; 2025 Manufaktura Ortodoncji. Wszelkie prawa zastrzeżone.</p>
         <p>Pracownia Ortodontyczna | Bestwina</p>
     </footer>
 
