--- a/index.html
+++ b/index.html
@@ -39,8 +39,30 @@
             padding: 0 2rem;
         }
 
+        .logo-nav {
+            display: flex;
+            align-items: center;
+            gap: 1rem;
+        }
+
+        .logo-nav-img {
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            overflow: hidden;
+            background: white;
+            padding: 5px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+        }
+
+        .logo-nav-img img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+        }
+
         .logo-text {
-            font-size: 1.5rem;
+            font-size: 1.3rem;
             font-weight: bold;
             letter-spacing: 1px;
         }
@@ -62,27 +84,47 @@
             color: #95a5a6;
         }
 
-        /* Hero Section */
+        /* Hero Section - Banner Style */
         .hero {
             margin-top: 70px;
-            background: linear-gradient(135deg, #ecf0f1 0%, #bdc3c7 100%);
-            color: #2c3e50;
-            padding: 3rem 2rem 2rem;
-            text-align: center;
+            position: relative;
+            height: 500px;
+            overflow: hidden;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: #f5f5f5;
+        }
+
+        .hero-banner {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            opacity: 0.25;
         }
 
         .hero-content {
-            max-width: 1200px;
+            max-width: 900px;
             margin: 0 auto;
+            position: relative;
+            z-index: 2;
+            text-align: center;
+            padding: 2.5rem;
+            background: rgba(255,255,255,0.95);
+            border-radius: 15px;
+            box-shadow: 0 10px 40px rgba(0,0,0,0.15);
         }
 
         .logo-container {
-            max-width: 250px;
+            max-width: 180px;
             margin: 0 auto 1.5rem;
             background: white;
-            padding: 1.5rem;
+            padding: 1rem;
             border-radius: 15px;
-            box-shadow: 0 5px 20px rgba(0,0,0,0.1);
+            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
         }
 
         .logo-container img {
@@ -91,7 +133,7 @@
         }
 
         .hero h1 {
-            font-size: 2.2rem;
+            font-size: 2rem;
             margin-bottom: 0.5rem;
             color: #2c3e50;
             font-weight: 300;
@@ -433,8 +475,16 @@
                 gap: 1rem;
             }
 
+            .hero {
+                height: 400px;
+            }
+
+            .hero-content {
+                padding: 2rem 1.5rem;
+            }
+
             .hero h1 {
-                font-size: 1.8rem;
+                font-size: 1.5rem;
             }
 
             .hero .subtitle {
@@ -515,39 +565,30 @@
 <body>
     <header>
         <nav>
-            <div class="logo-text">MANUFAKTURA ORTODONCJI</div>
+            <div class="logo-nav">
+                <div class="logo-nav-img">
+                    <img src="logo.jpeg" alt="Logo">
+                </div>
+                <div class="logo-text">MANUFAKTURA ORTODONCJI</div>
+            </div>
             <ul>
-                <li><a href="#home">Strona główna</a></li>
+                <li><a href="index.html">Strona główna</a></li>
                 <li><a href="#uslugi">Usługi</a></li>
                 <li><a href="#o-nas">O nas</a></li>
+                <li><a href="galeria.html">Galeria</a></li>
                 <li><a href="#kontakt">Kontakt</a></li>
             </ul>
         </nav>
     </header>
 
     <section id="home" class="hero">
+        <img src="image00001.jpeg" alt="Manufaktura Ortodoncji" class="hero-banner">
         <div class="hero-content">
             <div class="logo-container">
                 <img src="logo.jpeg" alt="Manufaktura Ortodoncji Logo">
             </div>
             <h1>MANUFAKTURA ORTODONCJI</h1>
             <p class="subtitle">Pracownia Ortodontyczna - Profesjonalna obsługa gabinetów stomatologicznych</p>
-            
-            <div class="slider-container">
-                <div class="slider" id="slider">
-                    <div class="slide"><img src="image00001.jpeg" alt="Aparat ortodontyczny 1"></div>
-                    <div class="slide"><img src="image00002.jpeg" alt="Aparat ortodontyczny 2"></div>
-                    <div class="slide"><img src="image00003.jpeg" alt="Aparat ortodontyczny 3"></div>
-                    <div class="slide"><img src="image00004.jpeg" alt="Aparat ortodontyczny 4"></div>
-                    <div class="slide"><img src="image00005.jpeg" alt="Aparat ortodontyczny 5"></div>
-                    <div class="slide"><img src="image00006.jpeg" alt="Aparat ortodontyczny 6"></div>
-                    <div class="slide"><img src="image00007.jpeg" alt="Aparat ortodontyczny 7"></div>
-                    <div class="slide"><img src="image00008.jpeg" alt="Aparat ortodontyczny 8"></div>
-                    <div class="slide"><img src="image00009.jpeg" alt="Aparat ortodontyczny 9"></div>
-                </div>
-            </div>
-
-            <div class="slider-dots" id="sliderDots"></div>
             <a href="#kontakt" class="cta-button">SKONTAKTUJ SIĘ</a>
         </div>
     </section>
@@ -673,7 +714,7 @@
                         </svg>
                     </div>
                     <div class="contact-text">
-                        <p>KONTAKT@MANUFAKTURA-ORTODONCJI.PL</p>
+                        <p><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="f1babebfa5b0baa5b1bcb0bfa4b7b0baa5a4a3b0dcbea3a5beb5bebfb2bbb8dfa1bd">[email&#160;protected]</a></p>
                     </div>
                 </div>
 
@@ -725,7 +766,7 @@
         <p>Pracownia Ortodontyczna | Bestwina</p>
     </footer>
 
-    <script>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
         const slider = document.getElementById('slider');
         const slides = document.querySelectorAll('.slide');
         const dotsContainer = document.getElementById('sliderDots');
@@ -771,13 +812,4 @@
         });
 
         window.addEventListener('scroll', function() {
-            const header = document.querySelector('header');
-            if (window.scrollY > 50) {
-                header.style.background = '#1a252f';
-            } else {
-                header.style.background = '#2c3e50';
-            }
-        });
-    </script>
-</body>
-</html>
+            const header = document.que
