--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
                         </svg>
                     </div>
                     <div class="contact-text">
-                        <p><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="f1babebfa5b0baa5b1bcb0bfa4b7b0baa5a4a3b0dcbea3a5beb5bebfb2bbb8dfa1bd">[email&#160;protected]</a></p>
+                        <p><a href="mailto:manufaktura@ortodoncji.hub.pl">manufaktura@ortodoncji.hub.pl</a></p>
                     </div>
                 </div>
 
@@ -766,38 +766,8 @@
         <p>Pracownia Ortodontyczna | Bestwina</p>
     </footer>
 
-    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
-        const slider = document.getElementById('slider');
-        const slides = document.querySelectorAll('.slide');
-        const dotsContainer = document.getElementById('sliderDots');
-        let currentSlide = 0;
-        const totalSlides = slides.length;
-
-        for (let i = 0; i < totalSlides; i++) {
-            const dot = document.createElement('div');
-            dot.classList.add('dot');
-            if (i === 0) dot.classList.add('active');
-            dot.addEventListener('click', () => goToSlide(i));
-            dotsContainer.appendChild(dot);
-        }
-
-        const dots = document.querySelectorAll('.dot');
-
-        function goToSlide(n) {
-            currentSlide = n;
-            slider.style.transform = `translateX(-${currentSlide * 100}%)`;
-            dots.forEach((dot, index) => {
-                dot.classList.toggle('active', index === currentSlide);
-            });
-        }
-
-        function nextSlide() {
-            currentSlide = (currentSlide + 1) % totalSlides;
-            goToSlide(currentSlide);
-        }
-
-        setInterval(nextSlide, 4000);
-
+    <script>
+        // Smooth scrolling
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
                 e.preventDefault();
@@ -810,6 +780,6 @@
                 }
             });
         });
-
-        window.addEventListener('scroll', function() {
-            const header = document.que
+    </script>
+</body>
+</html>
