--- a/galeria.html
+++ b/galeria.html
@@ -265,73 +265,97 @@
         <h1>Galeria Naszych Prac</h1>
         <div class="gallery-grid">
             <div class="gallery-item" onclick="openLightbox(0)">
-                <img src="image00008.jpeg" alt="Manufaktura Ortodoncji - Praca 1">
+                <img src="image00001.jpeg" alt="Manufaktura Ortodoncji - Praca 1">
             </div>
             <div class="gallery-item" onclick="openLightbox(1)">
-                <img src="image00010.jpeg" alt="Manufaktura Ortodoncji - Praca 2">
+                <img src="image00002.jpeg" alt="Manufaktura Ortodoncji - Praca 2">
             </div>
             <div class="gallery-item" onclick="openLightbox(2)">
-                <img src="image00011.jpeg" alt="Manufaktura Ortodoncji - Praca 3">
+                <img src="image00003.jpeg" alt="Manufaktura Ortodoncji - Praca 3">
             </div>
             <div class="gallery-item" onclick="openLightbox(3)">
-                <img src="image00012.jpeg" alt="Manufaktura Ortodoncji - Praca 4">
+                <img src="image00004.jpeg" alt="Manufaktura Ortodoncji - Praca 4">
             </div>
             <div class="gallery-item" onclick="openLightbox(4)">
-                <img src="image00013.jpeg" alt="Manufaktura Ortodoncji - Praca 5">
+                <img src="image00005.jpeg" alt="Manufaktura Ortodoncji - Praca 5">
             </div>
             <div class="gallery-item" onclick="openLightbox(5)">
-                <img src="image00014.jpeg" alt="Manufaktura Ortodoncji - Praca 6">
+                <img src="image00006.jpeg" alt="Manufaktura Ortodoncji - Praca 6">
             </div>
             <div class="gallery-item" onclick="openLightbox(6)">
-                <img src="image00015.jpeg" alt="Manufaktura Ortodoncji - Praca 7">
+                <img src="image00007.jpeg" alt="Manufaktura Ortodoncji - Praca 7">
             </div>
             <div class="gallery-item" onclick="openLightbox(7)">
-                <img src="image00016.jpeg" alt="Manufaktura Ortodoncji - Praca 8">
+                <img src="image00008.jpeg" alt="Manufaktura Ortodoncji - Praca 8">
             </div>
             <div class="gallery-item" onclick="openLightbox(8)">
-                <img src="image00017.jpeg" alt="Manufaktura Ortodoncji - Praca 9">
+                <img src="image00009.jpeg" alt="Manufaktura Ortodoncji - Praca 9">
             </div>
             <div class="gallery-item" onclick="openLightbox(9)">
-                <img src="image00018.jpeg" alt="Manufaktura Ortodoncji - Praca 10">
+                <img src="image00010.jpeg" alt="Manufaktura Ortodoncji - Praca 10">
             </div>
             <div class="gallery-item" onclick="openLightbox(10)">
-                <img src="image00019.jpeg" alt="Manufaktura Ortodoncji - Praca 11">
+                <img src="image00011.jpeg" alt="Manufaktura Ortodoncji - Praca 11">
             </div>
             <div class="gallery-item" onclick="openLightbox(11)">
-                <img src="image00020.jpeg" alt="Manufaktura Ortodoncji - Praca 12">
+                <img src="image00012.jpeg" alt="Manufaktura Ortodoncji - Praca 12">
             </div>
             <div class="gallery-item" onclick="openLightbox(12)">
-                <img src="image00021.jpeg" alt="Manufaktura Ortodoncji - Praca 13">
+                <img src="image00013.jpeg" alt="Manufaktura Ortodoncji - Praca 13">
             </div>
             <div class="gallery-item" onclick="openLightbox(13)">
-                <img src="image00022.jpeg" alt="Manufaktura Ortodoncji - Praca 14">
+                <img src="image00014.jpeg" alt="Manufaktura Ortodoncji - Praca 14">
             </div>
             <div class="gallery-item" onclick="openLightbox(14)">
-                <img src="image00023.jpeg" alt="Manufaktura Ortodoncji - Praca 15">
+                <img src="image00015.jpeg" alt="Manufaktura Ortodoncji - Praca 15">
             </div>
             <div class="gallery-item" onclick="openLightbox(15)">
-                <img src="image00024.jpeg" alt="Manufaktura Ortodoncji - Praca 16">
+                <img src="image00016.jpeg" alt="Manufaktura Ortodoncji - Praca 16">
             </div>
             <div class="gallery-item" onclick="openLightbox(16)">
-                <img src="image00025.jpeg" alt="Manufaktura Ortodoncji - Praca 17">
+                <img src="image00017.jpeg" alt="Manufaktura Ortodoncji - Praca 17">
             </div>
             <div class="gallery-item" onclick="openLightbox(17)">
-                <img src="image00026.jpeg" alt="Manufaktura Ortodoncji - Praca 18">
+                <img src="image00018.jpeg" alt="Manufaktura Ortodoncji - Praca 18">
             </div>
             <div class="gallery-item" onclick="openLightbox(18)">
-                <img src="image00027.jpeg" alt="Manufaktura Ortodoncji - Praca 19">
+                <img src="image00019.jpeg" alt="Manufaktura Ortodoncji - Praca 19">
             </div>
             <div class="gallery-item" onclick="openLightbox(19)">
-                <img src="image00028.jpeg" alt="Manufaktura Ortodoncji - Praca 20">
+                <img src="image00020.jpeg" alt="Manufaktura Ortodoncji - Praca 20">
             </div>
             <div class="gallery-item" onclick="openLightbox(20)">
-                <img src="image00029.jpeg" alt="Manufaktura Ortodoncji - Praca 21">
+                <img src="image00021.jpeg" alt="Manufaktura Ortodoncji - Praca 21">
             </div>
             <div class="gallery-item" onclick="openLightbox(21)">
-                <img src="image00030.jpeg" alt="Manufaktura Ortodoncji - Praca 22">
+                <img src="image00022.jpeg" alt="Manufaktura Ortodoncji - Praca 22">
             </div>
             <div class="gallery-item" onclick="openLightbox(22)">
-                <img src="image00031.jpeg" alt="Manufaktura Ortodoncji - Praca 23">
+                <img src="image00023.jpeg" alt="Manufaktura Ortodoncji - Praca 23">
+            </div>
+            <div class="gallery-item" onclick="openLightbox(23)">
+                <img src="image00024.jpeg" alt="Manufaktura Ortodoncji - Praca 24">
+            </div>
+            <div class="gallery-item" onclick="openLightbox(24)">
+                <img src="image00025.jpeg" alt="Manufaktura Ortodoncji - Praca 25">
+            </div>
+            <div class="gallery-item" onclick="openLightbox(25)">
+                <img src="image00026.jpeg" alt="Manufaktura Ortodoncji - Praca 26">
+            </div>
+            <div class="gallery-item" onclick="openLightbox(26)">
+                <img src="image00027.jpeg" alt="Manufaktura Ortodoncji - Praca 27">
+            </div>
+            <div class="gallery-item" onclick="openLightbox(27)">
+                <img src="image00028.jpeg" alt="Manufaktura Ortodoncji - Praca 28">
+            </div>
+            <div class="gallery-item" onclick="openLightbox(28)">
+                <img src="image00029.jpeg" alt="Manufaktura Ortodoncji - Praca 29">
+            </div>
+            <div class="gallery-item" onclick="openLightbox(29)">
+                <img src="image00030.jpeg" alt="Manufaktura Ortodoncji - Praca 30">
+            </div>
+            <div class="gallery-item" onclick="openLightbox(30)">
+                <img src="image00031.jpeg" alt="Manufaktura Ortodoncji - Praca 31">
             </div>
         </div>
     </div>
@@ -353,7 +377,15 @@
 
     <script>
         const images = [
+            'image00001.jpeg',
+            'image00002.jpeg',
+            'image00003.jpeg',
+            'image00004.jpeg',
+            'image00005.jpeg',
+            'image00006.jpeg',
+            'image00007.jpeg',
             'image00008.jpeg',
+            'image00009.jpeg',
             'image00010.jpeg',
             'image00011.jpeg',
             'image00012.jpeg',
